--- a/src/app/clientes/financeiro/financeiro.component.html
+++ b/src/app/clientes/financeiro/financeiro.component.html
@@ -47,7 +47,7 @@
                     <thead>
                     <tr>
                         <th style="width: 70%">{{'financeiro.natureza' | translate}}</th>
-                        <th class="custom-td">{{'geral.valor' | translate}}</th>
+                        <th class="custom-td" id="valor-th">{{'geral.valor' | translate}}</th>
                         <th class="custom-td">{{'financeiro.previousBalance' | translate}}</th>
                         <th class="custom-td">{{'financeiro.subsequentBalance' | translate}}</th>
                     </tr>
@@ -55,7 +55,7 @@
                     <tbody *ngIf="!showLoading">
                     <ng-container *ngFor="let movimentacao of movimentacoesFinanceiras">
                         <tr>
-                            <td>
+                            <td class="natureza-td">
                                 <i style="color:green; margin-right: 5px; margin-left: 5px;" class="fa fa-sort-up"
                                 *ngIf="movimentacao.tipo === 'C'; else iconeDebito"></i>
                                 <ng-template #iconeDebito>
