--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
@@ -27,26 +27,26 @@
         </ng-container>
         <div class="valores">
             <p id="resultado-final">
-                <b>RESULTADO: </b>
+                <span>Resultado: </span>
                 <span style="float:right" *ngIf="aposta.resultado" class="{{aposta.resultado}}">{{aposta.resultado}}</span>
                 <span style="float:right" *ngIf="!aposta.resultado">Aguardando</span>
             </p>
             <p class="aposta">
-                COTAÇÃO: <span style="float:right">{{aposta.possibilidade_ganho / aposta.valor | number:'1.0-3' }}</span>
+                Cotação: <span style="float:right">{{aposta.possibilidade_ganho / aposta.valor | number:'1.0-3' }}</span>
             </p>
             <p class="aposta">
-                VALOR APOSTADO: <span style="float:right">{{aposta.valor | currency}}</span>
+                Valor apostado: <span style="float:right">{{aposta.valor | currency}}</span>
             </p>
             <p class="ganho" *ngIf="aposta.resultado; else possibilidadeGanho">
                 {{'geral.premio' | translate | uppercase}}: <span style="float:right">{{aposta.premio | currency}}</span>
             </p>
             <ng-template #possibilidadeGanho>
                 <p class="ganho">
-                    POSSÍVEL RETORNO: <span style="float:right">{{aposta.possibilidade_ganho | currency}}</span>
+                    Possível retorno: <span style="float:right">{{aposta.possibilidade_ganho | currency}}</span>
                 </p>
             </ng-template>
             <p *ngIf="aposta.passador.percentualPremio > 0" class="cambista-paga">
-                CAMBISTA PAGA: <span style="float:right">{{cambistaPaga | currency}}</span>
+                Cambista paga: <span style="float:right">{{cambistaPaga | currency}}</span>
             </p>
         </div>
         <p class="rodape">
