--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
@@ -31,10 +31,11 @@
     font-size: 12px;
 }
 .cupom-header p {
-    font-size: 12px;
+    font-size: 13px;
+    padding-right: 10px;
+    padding-left: 10px;
     width: 100%;
-    margin-bottom: 4px;
-    font-weight: 600;
+    margin-bottom: 10px;
 }
 .cupom-header span {
     margin-left: 3px;
