--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.css
@@ -29,6 +29,7 @@
     padding: 10px;
     color: var(--foreground);
     font-size: 12px;
+    padding-top: 25px;
 }
 .cupom-header p {
     font-size: 13px;
