--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.html
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.html
@@ -126,7 +126,7 @@
                                 <th>{{'geral.premio' | translate}} </th>
                                 <th>{{'bet.incomeTaxOnPrize' | translate}} </th>
                                 <th>{{'geral.estado' | translate}}</th>
-                                <th *ngIf="tabSelected !== 'cassino' && tabSelected !== 'loteria-popular'"></th>
+                                <th *ngIf="tabSelected !== 'loteria-popular'"></th>
                             </tr>
                             </thead>
                             <tr *ngIf="loading">
