--- a/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
+++ b/src/app/shared/layout/exibir-bilhete/esportes/exibir-bilhete-esportivo.component.html
@@ -6,7 +6,7 @@
                 <ng-container *ngFor="let item of aposta.itens">
                     <tr class="cupom">
                         <td class="item info-cupom" style="max-width: 5rem;">
-                            <div style="text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                            <div style="text-align: center; position: absolute; top: 50%; left: 20%; transform: translate(0%, -50%);">
                                 <p class="info-cupom" style="margin-bottom: 0;"> {{item.jogo_horario | moment: 'DD/MM'}} </p>
                                 <p class="info-cupom" style="margin-bottom: 0;"> {{item.jogo_horario | moment: 'HH:mm'}} </p>
                             </div>
@@ -34,7 +34,7 @@
                             </div>
                         </td>
                         <td class="item">
-                            <p class="jogo-resultado" *ngIf="item.encerrado && !item.removido; else resultado">
+                            <p class="jogo-resultado" style="float:right" *ngIf="item.encerrado && !item.removido; else resultado">
                                 Encerrado <br />
                                 <span [ngClass]="resultadoClass(item)">
                                     <ng-container *ngIf="item.resultado !== null && item.resultado !== undefined">
@@ -43,7 +43,7 @@
                                 </span>
                             </p>
                             <ng-template #resultado>
-                                <p class="jogo-resultado">
+                                <p class="jogo-resultado" style="float:right">
                                     <span *ngIf="item.removido" style="text-transform: uppercase;">Cancelado</span>
                                     <span *ngIf="!item.removido && !item.encerrado" [ngClass]="resultadoClass(item)">
                                         {{item.resultado}}
