--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.html
@@ -56,7 +56,7 @@
             <tbody>
                 <ng-container *ngFor="let item of aposta.itens">
                     <tr class="cupom" style="border-bottom: 2px dotted black;">
-                        <td class="item" style="min-width: 3rem; max-width: 5rem; position: relative">
+                        <td class="item" style="min-width: 3rem; width: 7rem; position: relative">
                             <div style="text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                                 <p class="info-cupom" style="margin-bottom: 0">
                                     {{item.jogo_horario | moment: 'DD/MM'}}
@@ -89,7 +89,7 @@
                             </div>
                         </td>
                         <td class="item">
-                            <p class="jogo-resultado" *ngIf="item.encerrado && !item.removido; else resultado">
+                            <p class="jogo-resultado" style="float:right" *ngIf="item.encerrado && !item.removido; else resultado">
                                 ENCERRADO <br />
                                 <span [ngClass]="resultadoClass(item)">
                                     <ng-container *ngIf="item.resultado !== null && item.resultado !== undefined">
@@ -98,7 +98,7 @@
                                 </span>
                             </p>
                             <ng-template #resultado>
-                                <p class="jogo-resultado">
+                                <p class="jogo-resultado" style="float:right">
                                     <span *ngIf="item.removido" style="text-transform: uppercase;">Cancelado</span>
                                     <span *ngIf="!item.removido && !item.encerrado" [ngClass]="resultadoClass(item)">
                                         {{item.resultado}}
