--- a/src/app/clientes/configuracoes/configuracoes.component.html
+++ b/src/app/clientes/configuracoes/configuracoes.component.html
@@ -286,7 +286,7 @@
                                         ('saques.identityVerifyNeeded' | translate)}}
                                     </div>
                                     <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf" />
-                                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchAccountDeletionValidated">
                                         <i class="fa-solid fa-id-card"></i>
                                         {{'saques.identityVerify' | translate}}
                                     </button>
@@ -301,14 +301,14 @@
                                         ('saques.identityVerifyNeeded' | translate)}}
                                     </div>
                                     <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf" />
-                                    <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity">
+                                    <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchAccountDeletionValidated">
                                         <i class="fa-solid fa-id-card"></i>
                                         {{'saques.identityVerify' | translate}}
                                     </button>
                                 </div>
                                 <div id="legitimuz-root"></div>
                             </div>
-                            <button [disabled]="!faceMatchDeleteAccountValidated" type="submit" class="btn btn-custom" [ngStyle]="{'margin-top': faceMatchEnabled ? '15px' : '0px'}">{{ 'jogo_responsavel.exclusao_conta.excluir_conta' | translate }}</button>
+                            <button [disabled]="!faceMatchAccountDeletionValidated" type="submit" class="btn btn-custom" [ngStyle]="{'margin-top': faceMatchEnabled ? '15px' : '0px'}">{{ 'jogo_responsavel.exclusao_conta.excluir_conta' | translate }}</button>
                         </form>
                     </div>
                 </section>
