--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -261,6 +261,11 @@
                                 <span class="regiao-nome">{{'geral.lastAccesses' | translate}}</span>
                             </a>
                         </li>
+                        <li class="cambista-subitem">
+                            <a [routerLink]="['/bank-accounts']" routerLinkActive="router-link-active">
+                                <span class="regiao-nome">{{'geral.bankAccounts' | translate}}</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
