feature: accounts bank

--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -263,7 +263,7 @@
                         </li>
                         <li class="cambista-subitem">
                             <a [routerLink]="['/bank-accounts']" routerLinkActive="router-link-active">
-                                <span class="regiao-nome">{{'geral.bankAccounts' | translate}}</span>
+                                <span class="regiao-nome">{{'bankAccounts.title' | translate}}</span>
                             </a>
                         </li>
                     </ul>
