--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -473,6 +473,15 @@
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
                                 </a>
+                                <a (click)="openValidatePhoneModal()" *ngIf="isMandatoryPhoneValidation && !userPhoneValidated">
+                                    <span>
+                                        <i class="fa fa-solid fa-phone"></i>
+                                    </span>
+                                    {{ 'geral.validatePhone' | translate }}
+                                    <span class="arrow-nav">
+                                        <i class="fa-solid fa-angle-right"></i>
+                                    </span>
+                                </a>
                                 <a (click)="abrirFinanceiro()">
                                     <span>
                                         <i class="fa fa-solid fa-dollar"></i>
