--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -261,6 +261,11 @@
                                 <span class="regiao-nome">{{'geral.lastAccesses' | translate}}</span>
                             </a>
                         </li>
+                        <li class="cambista-subitem" *ngIf="isMandatoryPhoneValidation && !userPhoneValidated">
+                            <a (click)="openValidatePhoneModal()">
+                                <span class="regiao-nome">{{'geral.validatePhone' | translate}}</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
